; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_auth2-pubkey.c_match_principals_option.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_auth2-pubkey.c_match_principals_option.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sshkey_cert = type { i64, i32* }

@.str = private unnamed_addr constant [44 x i8] c"matched principal from key options \22%.100s\22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.sshkey_cert*)* @match_principals_option to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @match_principals_option(i8* %0, %struct.sshkey_cert* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.sshkey_cert*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store %struct.sshkey_cert* %1, %struct.sshkey_cert** %5, align 8
  store i64 0, i64* %7, align 8
  br label %8

8:                                                ; preds = %30, %2
  %9 = load i64, i64* %7, align 8
  %10 = load %struct.sshkey_cert*, %struct.sshkey_cert** %5, align 8
  %11 = getelementptr inbounds %struct.sshkey_cert, %struct.sshkey_cert* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  %13 = icmp ult i64 %9, %12
  br i1 %13, label %14, label %33

14:                                               ; preds = %8
  %15 = load %struct.sshkey_cert*, %struct.sshkey_cert** %5, align 8
  %16 = getelementptr inbounds %struct.sshkey_cert, %struct.sshkey_cert* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = load i64, i64* %7, align 8
  %19 = getelementptr inbounds i32, i32* %17, i64 %18
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %4, align 8
  %22 = call i8* @match_list(i32 %20, i8* %21, i32* null)
  store i8* %22, i8** %6, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %24, label %29

24:                                               ; preds = %14
  %25 = load i8*, i8** %6, align 8
  %26 = call i32 @debug3(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str, i64 0, i64 0), i8* %25)
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @free(i8* %27)
  store i32 1, i32* %3, align 4
  br label %34

29:                                               ; preds = %14
  br label %30

30:                                               ; preds = %29
  %31 = load i64, i64* %7, align 8
  %32 = add i64 %31, 1
  store i64 %32, i64* %7, align 8
  br label %8

33:                                               ; preds = %8
  store i32 0, i32* %3, align 4
  br label %34

34:                                               ; preds = %33, %24
  %35 = load i32, i32* %3, align 4
  ret i32 %35
}

declare dso_local i8* @match_list(i32, i8*, i32*) #1

declare dso_local i32 @debug3(i8*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
